<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="440dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_priem"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_priem"
            android:text="@string/priem" />

        <Button
            android:id="@+id/btn_vidacha"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_vidacha"
            android:text="@string/vidacha" />

        <Button
            android:id="@+id/btn_editor"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_nerga"
            android:text="@string/editor" />

        <Button
            android:id="@+id/btn_info"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_info"
            android:text="@string/add_location" />

        <Button
            android:id="@+id/btn_add_new_pr"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_add_pr"
            android:text="@string/add_product" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageVinny"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@id/textView"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        android:src="@drawable/selecta_picture" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="" />

    <Button
        android:id="@+id/btn_moto_clock"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_moto_clock"
        android:shadowColor="#A8A8A8"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="500dp"
        android:shadowRadius="5"
        android:text="М"
        android:textColor="#FFFFFF"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_zametki"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_zametki"
        android:shadowColor="#A8A8A8"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="600dp"
        android:shadowRadius="5"
        android:text="З"
        android:textColor="#FFFFFF"
        android:textSize="30sp"/>

</RelativeLayout>